--- a/MyIntentAppKotlin/app/src/main/res/layout/activity_main.xml
+++ b/MyIntentAppKotlin/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,25 @@
         android:layout_marginBottom="16dp"
         android:text="@string/move_activity" />
 
-    <Button android:id="@+id/btn_move_activity_data"
+    <Button
+        android:id="@+id/btn_move_activity_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="@string/move_with_data" />
 
     <Button
-       android:id="@+id/btn_move_activity_object"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginBottom="16dp"
-       android:text="@string/move_with_object" />
+        android:id="@+id/btn_move_activity_object"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/move_with_object" />
+
+    <Button
+        android:id="@+id/btn_dial_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/dial_number" />
+
 </LinearLayout>
